--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,11 +12,12 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:orientation="horizontal"
         android:layout_alignParentBottom="true"
-        android:layout_marginHorizontal="60dp"
+        android:layout_marginHorizontal="40dp"
         android:gravity="center"
+        android:layout_marginTop="0dp"
         android:layout_marginBottom="20dp">
 
         <com.google.android.material.button.MaterialButton
@@ -29,16 +30,27 @@
             android:textColor="@color/white"
             android:backgroundTint="@color/orange" />
 
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/translateBtn"
             android:backgroundTint="@color/orange"
             android:layout_width="0dp"
-            android:layout_weight="2"
+            android:layout_weight="1.5"
             android:layout_height="60dp"
             android:textColor="@color/white"
             android:text="Translate"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="10dp"
             app:cornerRadius="10dp" />
+
+
+        <ImageView
+            android:id="@+id/mic_button"
+            android:padding="10dp"
+            android:layout_width="52dp"
+            android:layout_height="52dp"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/button_back"
+            android:src="@drawable/mic" />
 
 
 
@@ -48,15 +60,17 @@
         android:id="@+id/textv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:padding="8dp"
-
         android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="0dp"
+        android:padding="8dp"
         android:text="Text Translator"
-        android:textSize="28sp"
         android:textAlignment="center"
-        android:textStyle="bold"
-        android:textColor="@color/orange"/>
+        android:textColor="@color/orange"
+        android:textSize="28sp"
+        android:textStyle="bold" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
@@ -77,59 +91,71 @@
     </androidx.cardview.widget.CardView>
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/scrlv2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="90dp"
         android:layout_below="@+id/cardView"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="140dp">
+        android:layout_marginTop="20dp">
 
         <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <EditText
                 android:id="@+id/sourceLanguage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Enter Text here"
-                android:textColor="@color/black"
-                android:textColorHint="@color/fadeblack"
                 android:layout_marginHorizontal="40dp"
+                android:background="@drawable/custom_input"
+                android:hint="Enter Text here"
                 android:padding="8dp"
                 android:textAlignment="center"
-                android:background="@drawable/custom_input"/>
+                android:textColor="@color/black"
+                android:textColorHint="@color/fadeblack" />
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="8dp"
                 android:layout_marginTop="10dp"
                 android:rotation="90"
-                android:layout_marginHorizontal="8dp"
                 android:src="@drawable/arrow_right" />
 
 
             <EditText
                 android:id="@+id/TargetLanguage"
-                android:layout_below="@+id/cardView"
-                android:layout_marginBottom="54dp"
-                android:layout_marginHorizontal="40dp"
-                android:layout_above="@id/capture_button"
                 android:layout_width="match_parent"
-                android:background="@drawable/custom_input2"
                 android:layout_height="wrap_content"
+                android:layout_above="@id/capture_button"
+                android:layout_below="@+id/cardView"
+                android:layout_marginHorizontal="40dp"
                 android:layout_marginTop="10dp"
-                android:textColor="@color/black"
-                android:textAlignment="center"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/custom_input2"
                 android:cursorVisible="false"
-                android:inputType="none"
                 android:editable="false"
+                android:inputType="none"
                 android:longClickable="true"
-                android:textIsSelectable="true"
-                android:text="Translated Text"
                 android:padding="8dp"
+                android:text="Translated Text"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textIsSelectable="true"
                 android:textSize="18sp" />
+
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/saveHistoryBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:backgroundTint="@color/orange"
+                android:text="Save To History"
+                android:textColor="@color/white"
+                app:cornerRadius="10dp" />
+
         </LinearLayout>
     </ScrollView>
 
@@ -175,6 +201,15 @@
             app:cornerRadius="10dp" />
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/historyBtn"
+        android:layout_width="40dp"
+        android:layout_height="34dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"
+        android:src="@drawable/time" />
 
 
 </RelativeLayout>
